# Micron-AI-Challenge

./: .gitignore  0_eda.ipynb  1_modelling_randomforest.ipynb  2_modelling_xgboost.ipynb  LICENSE  Micron_felicia copy.ipynb  Micron_felicia.ipynb  Micron_felicia_v4.ipynb  README.md  code.ipynb  code_EDA.ipynb  pyproject.toml  utils_io.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
feature_engineered/: final_df_feature_engineered.parquet
loaded_data_df/: incoming_run_df.parquet  metrology_df.parquet  run_data_df.parquet
preprocessed_data/: final_df.parquet
submission/: metrology_data.parquet
test/: incoming_run_data.parquet
train/: metrology_data1.parquet  metrology_data10.parquet  metrology_data2.parquet  metrology_data3.parquet  metrology_data4.parquet  metrology_data51.parquet  metrology_data52.parquet  metrology_data53.parquet  metrology_data54.parquet  metrology_data55.parquet  metrology_data56.parquet  metrology_data57.parquet  metrology_data58.parquet  metrology_data59.parquet  metrology_data6.parquet  metrology_data60.parquet  metrology_data7.parquet  metrology_data8.parquet  metrology_data9.parquet
